--- a/start/client/package.json
+++ b/start/client/package.json
@@ -20,7 +20,7 @@
     "react-dom": "^16.9.0-alpha.0",
     "react-emotion": "^9.2.12",
     "react-scripts": "3.0.1",
-    "typescript": "^3.7.3"
+    "typescript": "3.7.3"
   },
   "scripts": {
     "start": "react-scripts start",
